--- a/Code-Project/src/index.css
+++ b/Code-Project/src/index.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 body {
   font-family: "Bungee", "Epunda Slab", "Story Script", sans-serif;
 }
